@@ -5,7 +5,7 @@
   <groupId>eu.lod2</groupId>
   <artifactId>lod2demo</artifactId>
   <packaging>war</packaging>
-  <version>1.1.2</version>
+  <version>1.1.3</version>
   <name>Vaadin Web Application</name>
 
   <properties>
