@@ -1,3 +1,9 @@
+lod2demo (1.1.3) lod2; urgency=low
+
+  * add references to packages d2r-cordis & silk. Add activation call for
+    to allow editing of graphs in OntoWiki.
+
+ -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Sun, 7 Aug 2011  02:37:31 -0700
 lod2demo (1.1.2) lod2; urgency=low
 
   * add reading of configuration graph in virtuoso. This will enable to
